cjh 删除module里的重复依赖，移至主gradle里。

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">RxNetWorkFrameWork</string>
 
     <string name="web_user_agent">set</string>
+    <string name="userName">用户名</string>
+    <string name="password">密码</string>
 </resources>
